# MovieManager

./: AdminTableModel.h  CMakeLists.txt  Delegate.cpp  Delegate.h  Exception.cpp  Exception.h  Gui.cpp  Movie.cpp  README.md  Repository.cpp  Service.cpp  Test.h  UndoRedo.cpp  UndoRedoServiceUser.h  UndoRedoUser.cpp  UndoRedoUser.h  UserTableModel.h  Validator.h  input.txt  main.cpp  watchlist.csv  watchlist.html  wathlist.csv
GUI/: AdminTableModel.cpp  Gui.h  UserTableModel.cpp
Model/: Movie.h  UndoRedo.h
Model/Validators/: Validator.cpp
Repository/: Repository.h
Service/: Service.h  UndoRedoServiceUser.cpp  UndoService.cpp  UndoService.h
Tests/: Test.cpp
